<resources>
    <string name="app_name">Scientific Calculator</string>
    <string name="ac">AC</string>
    <string name="sin">SIN</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X!</string>
    <string name="divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="tan">TAN</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="openbracet">(</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="equalto">=</string>
    <string name="del">DEL</string>
    <string name="point">.</string>
    <string name="todo">TODO</string>
</resources>