<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_light_background"
    android:weightSum="7"
    tools:context=".calculatorActivity">


    <TextView
        android:id="@+id/screen"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_gravity="center|right"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@color/purple_200"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"

        tools:ignore="MissingConstraints,RtlHardcoded,Suspicious0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:autofillHints=""

            android:onClick="ButtonClick"
            android:text="DEL"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="LabelFor,NestedWeights">

        </Button>

        <Button
            android:id="@+id/eight"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:autofillHints=""

            android:onClick="ButtonClick"
            android:text="@string/_8"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/nine"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:autofillHints=""

            android:onClick="ButtonClick"
            android:text="@string/_9"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/point"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="."
            android:textAlignment="center"
            android:textSize="39sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/log"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:autofillHints=""

            android:onClick="ButtonClick"
            android:text="ln"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/six"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="@string/_6"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/seven"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="@string/_7"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/div"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="÷"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/pow"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="^"
            android:textAlignment="center"
            android:textSize="31sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/four"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:autofillHints=""

            android:onClick="ButtonClick"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/five"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/mul"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="x"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="AC"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/two"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/three"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/minus"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/openbracet"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="@string/openbracet"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/one"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/zero"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/plus"
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold"
            tools:ignore="Suspicious0dp">

        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_weight="1"
        android:weightSum="3">


        <Button
            android:id="@+id/closebracet"
            android:layout_width="39dp"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text=")"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/equal"
            android:layout_width="140dp"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"

            android:backgroundTint="@android:color/holo_red_dark"
            android:contentDescription="@string/todo"
            android:onClick="ButtonClick"
            android:text="="
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold"
            tools:ignore="DuplicateIds,Suspicious0dp">

        </Button>

        <Button
            android:id="@+id/answer"
            android:layout_width="33dp"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"

            android:onClick="ButtonClick"
            android:text="ANS"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:outlineAmbientShadowColor="@android:color/holo_orange_dark"
            tools:ignore="Suspicious0dp">

        </Button>
    </LinearLayout>

</LinearLayout>